docker-mysql-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: docker-mysql
  labels:
    app: docker-mysql
spec:
  replicas: 1
  selector:
    matchLabels:
      app: docker-mysql
  template:
    metadata:
      labels:
        app: docker-mysql
    spec:
      containers:
        - name: docker-mysql
          image: mysql
