firstpod.yaml
kind: Pod
apiVersion: v1
metadata:
  name: firstpod
  labels:
    app: fp
    release: stable
spec:
  containers:
    - name: webapp
      image: pulkitpushkarna/kubernetes-with-spring-boot:v2
