webserver.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mywebserver
  labels:
    app: spring-boot-app
spec:
  replicas: 2
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
  selector:
    matchLabels:
      app: spring-boot-app
  template:
    metadata:
      labels:
        app: spring-boot-app
    spec:
      containers:
        - name: my-spring-boot-app
          image: pulkitpushkarna/kubernetes-with-spring-boot:v2
          ports:
            - containerPort: 8080
          volumeMounts:
            - name: demovol
              mountPath: /data
            - name: config-map-vol
              mountPath: /etc/config
      volumes:
        - name: demovol
          hostPath:
            path: /data
            type: Directory
        - name: config-map-vol
          configMap:
            name: demo-configmap
