webserver-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: webserver-service
spec:
  type: NodePort
  selector:
    app: spring-boot-app
  ports:
    - nodePort: 30123
      port: 8080
      targetPort: 8080
