student-virtualsewrvice.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: helloworld-virtual-services
spec:
  hosts:
    - "*"
  gateways:
    - http-gateway-student
  http:
    - match:
        - uri:
            prefix: /students
      route:
        - destination:
            host: student-rest-api
            port:
              number: 8080
